--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <title>Foundation | Welcome</title>
     <link rel="stylesheet" href="css/foundation.css" />
     <script src="js/modernizr.js"></script>
+    <script>
+    	function Henkilo(nimi, ika){
+			this.nimi = nimi;
+			this.ika = ika;	
+		}
+		
+	 	var henkilo1 = new Henkilo("Jaakko", "33");
+		alert(henkilo1.nimi);
+    </script>
   </head>
   <body>
    
