scripti omaan tiedostoon

--- a/index.html
+++ b/index.html
@@ -5,15 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Foundation | Welcome</title>
     <link rel="stylesheet" href="css/foundation.css" />
+    
     <script src="js/modernizr.js"></script>
-    <script>
-    	function Henkilo(nimi, ika){
-			this.nimi = nimi;
-			this.ika = ika;	
-		}
-		
-	 	var henkilo1 = new Henkilo("Jaakko", "33");
-		alert(henkilo1.nimi);
+    <script src="js/main.js" type="text/javascript">
+    	
     </script>
   </head>
   <body>
