--- a/index.html
+++ b/index.html
@@ -112,7 +112,10 @@
 </div>
 
 <div class="row">
-<div class="large-12 columns" style="background-color:#000000; height:30px; bottom:0;"></div>
+    <div class="large-12 columns" style="background-color:#000000; height:30px; bottom:0; color: white;">
+        <p>Pages made by k3rsk</p>
+    </div>
+
 </div>
 
 
